--- a/APUWebBot/APUWebBot.csproj
+++ b/APUWebBot/APUWebBot.csproj
@@ -7,5 +7,6 @@
 
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.8.11" />
+    <PackageReference Include="EPPlus" Version="4.5.3" />
   </ItemGroup>
 </Project>
