--- a/APUWebBot/APUWebBot.csproj
+++ b/APUWebBot/APUWebBot.csproj
@@ -9,4 +9,7 @@
     <PackageReference Include="HtmlAgilityPack" Version="1.8.11" />
     <PackageReference Include="EPPlus" Version="4.5.3" />
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="%28For 2011 Curriculum Students%29 2018 Fall Semester Course Timetable.xlsx" />
+  </ItemGroup>
 </Project>
