--- a/APUWebBot/APUWebBot.csproj
+++ b/APUWebBot/APUWebBot.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.8.11" />
     <PackageReference Include="EPPlus" Version="4.5.3" />
+    <PackageReference Include="Humanizer" Version="2.5.16" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="%28For 2011 Curriculum Students%29 2018 Fall Semester Course Timetable.xlsx" />
