--- a/APUWebBot/APUWebBot.csproj
+++ b/APUWebBot/APUWebBot.csproj
@@ -9,6 +9,9 @@
     <PackageReference Include="HtmlAgilityPack" Version="1.8.11" />
     <PackageReference Include="EPPlus" Version="4.5.3" />
     <PackageReference Include="Humanizer" Version="2.5.16" />
+    <PackageReference Include="SQLiteNetExtensions.Async" Version="2.1.0" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.5.231" />
+    <PackageReference Include="NUnit" Version="3.11.0" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="%28For 2011 Curriculum Students%29 2018 Fall Semester Course Timetable.xlsx" />
