--- a/APUWebBot/APUWebBot.csproj
+++ b/APUWebBot/APUWebBot.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="SQLiteNetExtensions.Async" Version="2.1.0" />
     <PackageReference Include="sqlite-net-pcl" Version="1.5.231" />
     <PackageReference Include="NUnit" Version="3.11.0" />
+    <PackageReference Include="Json.Net" Version="1.0.16" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="%28For 2011 Curriculum Students%29 2018 Fall Semester Course Timetable.xlsx" />
