--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,8 @@ bld/
 # Visual Studio Code cache/options directory
 .vscode/
 
+obj/
+
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
